--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,11 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "version": 2,
+    "functions": {
+        "api/index.py": {
+            "runtime": "python3.9"
+        }
+    },
+    "routes": [
+        { "src": "/api/(.*)", "dest": "api/index.py" }
+    ]
 }
