--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
     "version": 2,
     "functions": {
         "api/index.py": {
-            "runtime": "python3.9"
+            "runtime": "python3.9",
+            "memory": 1024
         }
     },
     "routes": [
-        { "src": "/api/(.*)", "dest": "api/index.py" }
+        { "src": "/api/.*", "dest": "/api/index.py" }
     ]
 }
