--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
     "version": 2,
-    "functions": {
-        "api/index.py": {
-            "runtime": "python3.9",
-            "memory": 1024
-        }
-    },
+    "builds": [
+        { "src": "api/index.py", "use": "@vercel/python" }
+    ],
     "routes": [
-        { "src": "/api/.*", "dest": "/api/index.py" }
+        { "src": "/api/.*", "dest": "api/index.py" }
     ]
 }
