--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-        { "src": "api/index.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-        { "src": "/api/.*", "dest": "api/index.py" }
-    ]
+  "functions": {
+    "api/*.py": {
+      "runtime": "@vercel/python"
+    }
+  },
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    }
+  ]
 }
+
